Update the config of Valine

--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -12,7 +12,7 @@
 
     <div id="access-lastmod" class="post">
       <span>
-        <i class="fas fa-clock" style="color: #7963e6;"></i>&nbsp;&nbsp;
+        <i class="fas fa-calendar-check" style="color: #fdd888;"></i>&nbsp;&nbsp;
         {{- site.data.label.panel.lastmod | default: 'Recent Update' -}}
       </span>
       <ul class="post-content pl-0 pb-1 ml-1 mt-2">
