Beautify the color of heatmap

--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -112,7 +112,7 @@ layout: page
             calculable: true,
             inRange: {
                 symbol: 'rect',
-                color: ['#ebedf0', '#c6e48b', '#7bc96f', '#239a3b', '#196127']
+                color: ['#ebedf0','#20d5fe', '#15a9ee','#1b72b6', '#0063b1']
             },
             itemWidth: 12,
             itemHeight: 12,
